microservices-demo/kustomize/overlay/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-boutique-demo-ingress
  annotations: {}
spec:
  ingressClassName: dev-nginx
  rules:
    - host: online-boutique-demo.dev.rubius.com
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  number: 8080
            path: /
            pathType: Prefix

  tls:
    - hosts:
      - "online-boutique-demo.dev.rubius.com"
      secretName: "online-boutique-demo.dev.rubius.com-tls"
